0.3
  TrueColor support. See https://github.com/termstandard/colors. We pass
  these through directly from the MUD without trying a fallback.

  Add support for the MTTS standard for client capabilities.

0.2.4
  Links against Lua 5 if available.  Note that it prefers Lua 5 over Lua 4, 
  and this may break your .crystal.lua since various system functions have
  been renamed in Lua 5.

  Keybinding support.  The lua function 'bind_key' can be used in .crystal.lua.
  (See the sample LUA script for usage)  To inspect and set the current
  keybindings, the interactive command 'bind' can be used.

0.2.3
  Build fixes for modern systems.
  Fix for uninitialised cell values.

0.2.2
  Build fix if libz not present.

  Minor terminal fixes.

0.2.1
  A -n command line option, which will stop local echoing of commands into
  the scrollback.

  A 'set' command will let you change this at runtime.  I might thing about
  .rc file support.

  SSL support.  This is done with the URL service 'telnets', for example -
  telnets://ipv6.cryosphere.net:6765/.

0.2
  Scripting with lua, if installed.  See crystal.lua for demonstrations.

  Cleaned up internals.  Split into many files now.

  Fix bug with WILL TTYPE and WILL NAWS only being sent once ever.

  Support for 'FLAG' - when you've connected to the 'flag' mud, do "charset
  cp437" at the crystal prompt.  For best effects run in a Unicode terminal.
  See <http://8bit.ath.cx/flag/> for documenation on this ad-hoc protocol.

  Support for a made-up telnet MULTIPLEX option, used by the Cryosphere for
  making subwindows to hold the current state of board games.   See 
  <https://musicmud.org/crystal/telopt-mplex.txt> for the documentation.

  Slightly better terminal emulation - still nowhere near self-hosting,
  but getting there.

  Add support for broken LPmud-style prompts (where it assumes its talking
  to tinyfugue, and that anything on a line before IAC GA/IAC EOR will
  go into a separate prompt line).
