@@ -1,25 +1,12 @@
 *.o
 .deps
 crystal
-crystal
-config.cache
 crystal.spec
-configure
-Makefile
 config.h
-Makefile.in
-aclocal.m4
-config.log
-.deps
 config.status
 config.h.in
-stamp-h
-stamp-h.in
 COPYING
 INSTALL
-install-sh
-depcomp
-missing
-autom4te.cache/
-compile
-stamp-h1
+CMakeCache.txt
+CMakeFiles/
+Makefile
