@@ -90,7 +90,6 @@
 #include "Socket.h"
 #include "url.h"
 
-#include "config.h"
 
 #undef SCROLL
 
