@@ -18,7 +18,6 @@
 #include <stdio.h>
 #include <string.h>
 
-#include "config.h"
 
 #ifdef HAVE_ZLIB
 
